@@ -1,12 +1,14 @@
 ## Process this file with automake to produce Makefile.in
 
 EXTRA_DIST = \
+	utilities.ctl \
 	transform_RRT.ctl \
 	transform_display_video.ctl
 
 
 ctldatadir = $(libdir)/CTL
 ctldata_DATA = \
+	utilities.ctl \
 	transform_RRT.ctl \
 	transform_display_video.ctl
 
